# RudeChat

./: .gitignore  README.md  RudeChat.spec  RudeUpdate.py  RudeUpdate.sh  linux_install.sh  pyproject.toml  requirements.txt  setup.py  windows_install.bat
RudeChat-OLD/: README.md  RudeCLI.py  conf.rude  config_window.py  list_window.py  main_gui.py  rude_chat.py  rude_client.py  shared_imports.py
RudeChat-OLD/Art/: clover.txt
RudeChat-OLD/Splash/: rude_splash_1.txt  rude_splash_3.txt  rude_splash_9.txt
RudeChat_async/: RudeChat3.py  conf.libera.rude  conf2.rude
RudeChat_async/Art/: cow1.txt  mush1.txt
RudeChat_async/Fortune Lists/: dadjoke.txt
RudeChat_split/: conf.libera.rude  conf.oftc.rude  configure_window.py  list_window.py  main.py  rude_client.py  rude_gui.py
RudeChat_split/Art/: cow3.txt  mouse.txt  ubuntu.txt
src/RudeChat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rudechat/: RudeChat3.py  __init__.py  conf.freenode.rude  conf.libera.rude  initialize_clients.py  main.py  rudechat.py  rudegui.py
src/rudechat/Art/: alien1.txt  ferengicow.txt  rat3.txt  rat4.txt
src/rudechat3/: LICENSE  conf.freenode.rude  conf.libera.rude  configure_window.py  format_decoder.py  gui_config.ini  gui_config_window.py  init_clients.py  list_window.py  main.py  nick_cleaner.py  nickname_colors.json  nickname_colours.json  rude_auto_away.py  rude_client.py  rude_colours.py  rude_dragndrop.py  rude_first_run.py  rude_friends.py  rude_gui.py  rude_logger.py  rude_popout.py  rude_pronouns.py  server_config_window.py  shared_imports.py
src/rudechat3/Art/: Windows.txt  catface.txt  fedora.txt  gmchat.txt  rat2.txt  transrights.txt
src/rudechat3/Fortune Lists/: insults.txt  therules.txt  yomama.txt
src/rudechat3/Splash/: rude_splash_1.txt  rude_splash_10.txt  rude_splash_11.txt  rude_splash_2.txt  rude_splash_3.txt  rude_splash_4.txt  rude_splash_5.txt  rude_splash_6.txt  rude_splash_7.txt  rude_splash_8.txt  rude_splash_9.txt
