[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RudeChat"
version = "3.1.4"
description = "RudeChat is a Python IRC client designed to be fast, portable, and fun."
authors = [
    { name = "Irish" }
]
license = { text = "GNU General Public License v3 (GPLv3)" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/ShrugShoulders/RudeChat"

[tool.setuptools]
packages = ["rudechat3"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"rudechat3" = [
    "Art/*",
    "Sounds/*",
    "Fortune Lists/*",
    "Splash/*",
    "*.rude",
    "*.ini",
    "nickname_colours.json",
    "rude.ico",
    "rude.png",
    "ignore_list.txt",
    "filtered_channels.txt",
    "first_run.txt"
]

[project.scripts]
rudechat = "rudechat3.main:main"
